# usac-velodata

./: .gitignore  README.md  pyproject.toml  ruff.toml
examples/: example_get_event_list.py
samples/: download_samples.py  metadata.json
samples/errors/: invalid_access.html  no_results_found.html
samples/event_lists/: colorado_2020.html  colorado_2020.html.meta.json
samples/load_info/: 132893.html  132893.html.meta.json
samples/permit_pages/: 2020-26.html  2020-26.html.meta.json  2024-13211.html
samples/race_results/: 1337864.html  1337864.html.meta.json
scratch/: test1.py
src/usac_velodata/: __init__.py  __main__.py  cli.py  client.py  exceptions.py  models.py  parser.py  serializers.py  utils.py
tests/: __init__.py  test_base_parser.py  test_caching.py  test_cli.py  test_client.py  test_csv_serializer.py  test_event_details_parser.py  test_event_list_parser.py  test_exceptions.py  test_flyer_fetcher.py  test_json_serializer.py  test_logging.py  test_race_results_parser.py  test_rate_limiting.py
