[project]
name = "usac-velodata"
version = "2025.3.2"
description = "Get events, and results from USAC"
readme = "README.md"
authors = [
    { name = "Vincent Davis", email = "vincent@heteroskedastic.net" }
]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "httpx>=0.28.1",
    "lxml>=5.3.1",
    "pydantic>=2.11.1",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]
